# fraud-detector

./: CONTRIBUTING.md  README.md  app.py  cli.py  dashboard.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  schema.sql  train.py
.github/workflows/: python.yml
docs/: architecture.mermaid
src/: auth.py  db.py  explain.py  graph.py  limiter.py  logger.py  metrics.py  middleware.py  model.py  models.py  rules.py  schema.py  tasks.py  utils.py  validation.py
tests/: test_api.py  test_rules.py
