[tool.poetry]
name = "fraud-detector"
version = "0.1.0"
description = ""
authors = ["Thanh Vu <thanhauco@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"